[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dev-platform"
version = "0.1.0"
description = "Deterministic developer workflow planning and execution from constrained natural language."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Vyas Bhagwat" }
]
keywords = ["agents", "developer-tools", "workflow", "orchestration", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[project.scripts]
agentic-dev = "main:main"

[tool.setuptools]
py-modules = ["main", "planner", "executor", "memory", "validator", "actions", "reporter", "run_store"]

[tool.setuptools.packages.find]
include = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
